removed un-needed observables

--- a/anc/THDMIIRoC/FlexibleSUSY.m.in
+++ b/anc/THDMIIRoC/FlexibleSUSY.m.in
@@ -84,39 +84,6 @@ HighPoleMassPrecision    = {hh, Ah, Hm};
 MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
 
-ExtraSLHAOutputBlocks = {
-   {FlexibleSUSYLowEnergy, {
-         {21, FlexibleSUSYObservable`AMM[Fe[2]]},
-         {22, FlexibleSUSYObservable`AMMUncertainty[Fe[2]]},
-         {26, FlexibleSUSYObservable`aMuonGM2Calc},
-         {27, FlexibleSUSYObservable`aMuonGM2CalcUncertainty}
-      }
-   }
-};
-
-(* input parameters for GM2Calc, see [arxiv:2110.13238] *)
-FSGM2CalcInput = {
-    yukawaType -> 2,
-    lambda1 -> 2 Lambda1,
-    lambda2 -> 2 Lambda2,
-    lambda3 -> Lambda3,
-    lambda4 -> Lambda4,
-    lambda5 -> Lambda5,
-    lambda6 -> Lambda6,
-    lambda7 -> Lambda7,
-    tanBeta -> v2 / v1,
-    m122 -> M122,
-    zetau -> 0,
-    zetad -> 0,
-    zetal -> 0,
-    deltau -> ZEROMATRIX[3,3],
-    deltad -> ZEROMATRIX[3,3],
-    deltal -> ZEROMATRIX[3,3],
-    piu -> ZEROMATRIX[3,3],
-    pid -> ZEROMATRIX[3,3],
-    pil -> ZEROMATRIX[3,3]
-};
-
 FSCalculateDecays = True;
-FSDecayParticles = {hh, Ah, Hm, Fu};
+FSDecayParticles = {hh, Ah};
 
